@@ -12,6 +12,7 @@ v2.0.5 (25.05.2011)
 ! next IMDB site changes: ratings
 ! imdb_person filmographies: quarters in years, e.g. 1924/II, lead to empty year
 * imdb::awards(): minor adjustments by Qvist
+! imdb_movielist: fixed mostpop_by_year() (was broken by IMDB site changes some time ago)
 
 v2.0.4 (28.12.2010)
 -------------------
